# WebhookAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  LICENSE  README.md  pyproject.toml  railway.toml  test_webhook.py
app/: config.py  health.py  main.py  models.py  normalisation.py  queue.py  router.py  transformer.py  worker.py
app/actions/: base.py  email.py  log_event.py  registry.py  slack.py
app/routers/: webhooks.py
app/verification/: github.py  slack.py  stripe.py
dashboard/: .env.local.example  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
dashboard/components/: ChartsSection.tsx  EventRow.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  PipelineDiagram.tsx  SummaryBar.tsx
dashboard/lib/: types.ts  utils.ts
dashboard/pages/: index.tsx
evals/: golden_dataset.json  results.json  run_evals.py
tests/: conftest.py  helpers.py  test_actions.py  test_github.py  test_normalisation.py  test_queue.py  test_router.py  test_stripe.py  test_transformer.py  test_worker.py
